# INF1301-damas

./: .gitignore  CMakeLists.txt  README.md  especificacao.txt  relatorio-henrique.txt  relatorio-marcelo.txt  relatorio-rafael.txt
Batches/: CompilaTudo.bat  GeraTudo.bat  Limpa.bat  TestaTudo.bat  TestaTudoString.bat  Tudo.bat  TudoString.bat  teste.sh
Composicao/: DAMAS.comp  DAMAS.list  DAMAS.make  DAMASDEBUG.comp  DAMASDEBUG.list  DAMASDEBUG.make  TESTEPECA.comp  TESTEPECA.list  TESTEPECA.make  TESTETABULEIRO.comp  TESTETABULEIRO.list  TESTETABULEIRO.make  TESTETABULEIRODEBUG.comp  TESTETABULEIRODEBUG.list  TESTETABULEIRODEBUG.make  TesteLista.comp  TesteLista.list  TesteLista.make
Docs/: LEIAME.txt  especificacao.txt  relatorio-henrique.txt  relatorio-marcelo.txt  relatorio-rafael.txt~
Fontes/: dama  jogo.c  jogo.h  lista.c  lista.h  main.c  peca.c  peca.h  tabuleiro.c  tabuleiro.h  testlista.c  testpeca.c  testtabuleiro.c  tipos.h
Objetos/: DAMAS.build  DAMASDEBUG.build  TESTETABULEIRODEBUG.build
Produto/: DAMAS.err  DAMASDEBUG.err  RegistroContadores  RegistroContadores.count  RegistroContadoresComDeturpacao  TESTEPECA.err  TESTETABULEIRO.err  TESTETABULEIRODEBUG.err  TesteLista.err  estatisticas  testelista  testelistaint  testepeca  testetabuleiro  tudo.err
Scripts/: Verificadores.count  testelista.script  testelistaint.script  testelistastring.script  testepeca.script  testetabuleiro.script  testetabuleiroSemDeturpacoes.script  testetabuleiroVerificacao.script
src/: lista.c  lista.h  main.c  main.c~  peca.c  peca.h  tabuleiro.c  tabuleiro.h
tests/: CMakeLists.txt  run.sh
tests/lista/: CMakeLists.txt  testlista.c
tests/peca/: CMakeLists.txt  testepeca.script  testpeca.c
tests/tabuleiro/: CMakeLists.txt  testetabuleiro.script  testtabuleiro.c
